style: function that handle with font weight

--- a/src/styles/abstracts/_functions.scss
+++ b/src/styles/abstracts/_functions.scss
@@ -3,3 +3,14 @@
 
   @return #{$rem-size}rem;
 }
+
+@function font-weight($weight) {
+  @if map-has-key($weights, $weight) {
+    @return map-get($weights, $weight);
+  }
+
+  @else {
+    @warn "Unfortunately, no value could be retrieved from `#{$weight}`. "
+      + "Available breakpoints are: #{map-keys($weights)}.";
+  }
+}
