--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,3 +3,12 @@ $breakpoints: (
   'medium': 992px,
   'large':  1200px
 ) !default;
+
+$weights: (
+  'thin':    100,
+  'light':   300,
+  'regular': 400,
+  'medium':  500,
+  'bold':    800,
+  'back':    900
+) !default;
