--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,3 +1,11 @@
+$purple: #411e5a;
+$light-purple: #6e4b87;
+$white:  #fff;
+
+$font-size-context: 16;
+
+$box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
 $breakpoints: (
   'small':  767px,
   'medium': 992px,
