fix: px to rem function

--- a/src/styles/abstracts/_functions.scss
+++ b/src/styles/abstracts/_functions.scss
@@ -1,5 +1,5 @@
 @function rem($size) {
-  $rem-size: $size / #{$font-size-context}px;
+  $rem-size: $size / $font-size-context;
 
   @return #{$rem-size}rem;
 }
