refactor: create variables to colors

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,6 +1,8 @@
-$purple: #411e5a;
+$purple:       #411e5a;
 $light-purple: #6e4b87;
-$white:  #fff;
+$white:        #fff;
+$dark:         #363636;
+$light-gray:   #888;
 
 $font-size-context: 16;
 
