--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -19,7 +19,7 @@
   &__link {
     background: $white;
     padding: 12px 0;
-    font-size: 14px;
+    font-size: rem(14);
     text-align: center;
     text-decoration: none;
     font-weight: font-weight('regular');
