feat: contact section

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,4 +4,7 @@
 @import "./base/geral";
 @import "./base/typhography";
 @import "./components/nav";
+@import "./components/form";
+@import "./components/button";
 @import "./layout/header";
+@import "./pages/landing-page";
