--- a/src/styles/base/_typhography.scss
+++ b/src/styles/base/_typhography.scss
@@ -1,17 +1,32 @@
+.title {
+  font-size: rem(20);
+  line-height: 24px;
+  color: $light-purple;
+  font-weight: font-weight('regular');
+}
+
+.text {
+  font-size: rem(12);
+  line-height: 18px;
+  color: $light-gray;
+  margin-top: 19px;
+}
+
 .main-title {
-  font-size: 20px;
-  line-height: 35px;
+  @extend .title;
+
   color: $white;
 
   strong {
-    font-size: 40px;
+    font-size: rem(40);
     font-weight: font-weight('bold');
     display: block;
+    line-height: rem(40);
   }
 }
 
 .main-subtitle {
-  font-size: 14px;
+  font-size: rem(14);
   font-weight: font-weight('regular');
   line-height: 16px;
   color: $white;
