--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -6,6 +6,8 @@
   &__content {
     @include container(69px);
 
+    max-width: 800px;
+
     @include respond-to('small') {
       text-align: center;
     }
