--- a/src/styles/base/_typhography.scss
+++ b/src/styles/base/_typhography.scss
@@ -36,3 +36,29 @@
     margin-top: 24px;
   }
 }
+
+.section-title {
+  font-size: rem(18);
+  line-height: 16px;
+  color: $purple;
+  font-weight: 800;
+  text-align: center;
+  position: relative;
+  margin-bottom: 50px;
+
+  span {
+    padding: 5px;
+    background: #fff;
+  }
+
+  &::before {
+    content: '';
+    height: 1px;
+    width: 100%;
+    background-color: #411e5a;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    z-index: -1;
+  }
+}
