--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,5 +6,6 @@
 @import "./components/nav";
 @import "./components/form";
 @import "./components/button";
+@import "./components/product";
 @import "./layout/header";
 @import "./pages/landing-page";
