chore: add footer

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,4 +8,5 @@
 @import "./components/button";
 @import "./components/product";
 @import "./layout/header";
+@import "./layout/footer";
 @import "./pages/landing-page";
